--- a/dashboard/templates/dashboard.ejs
+++ b/dashboard/templates/dashboard.ejs
@@ -12,7 +12,7 @@
 <% if (config.support_server) { %>
  <div class="support-server-container">
   <h3 class="support-server-header">Hey <%= user.username%>!</h3>
-  <p class="support-server-text">Join the Majo.exe server if you haven't already! <a href="/server">Join Now!</a></p>
+  <p class="support-server-text">Join the iLLness server if you haven't already! <a href="/server">Join Now!</a></p>
  </div>
 <% } %>
 
