--- a/dashboard/templates/profile.ejs
+++ b/dashboard/templates/profile.ejs
@@ -67,7 +67,7 @@ box-shadow: unset;
   <% if (config.support_server) { %>
  <div class="support-server-container">
   <h3 class="support-server-header">Hey <%= user.username%>!</h3>
-  <p class="support-server-text">Join the Majo.exe server if you haven't already! <a href="/server">Join Now!</a></p>
+  <p class="support-server-text">Join the iLLness server if you haven't already! <a href="/server">Join Now!</a></p>
  </div>
   <style>
 .support-server-container {
